Sonarcube fixes